# AgenticAI-For-SDLC

./: .env.docker.example  .gitignore  README.md  docker-compose.yml  run_backend.sh  run_frontend.sh  run_local.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json  start.sh  techmellon_airline.db  update_agent.sh
backend/agents/: __init__.py  agent_suite.py  analyzer_agent.py  developer_agent.py  fixer_agent.py  planner_agent.py
backend/agents/prompts/: __init__.py  almas.py
backend/agents/tools/: __init__.py  repo_context.py
backend/alembic/: env.py
backend/alembic/versions/: 20260402_0001_initial_schema.py  20260403_0002_seat_inventory.py  20260403_0003_booking_duplicate_guardrails.py  20260403_0004_database_guardrails.py
backend/app/: config.py  main.py  testing_catalog.py
backend/app/api/: errors.py
backend/app/data/: jira_issue_links.json
backend/app/db/: flight_schema.py  seat_inventory.py  session.py
backend/app/eval/: __init__.py  bug_catalog.py  cli.py  feature_catalog.py  harness.py  plot_results.py
backend/app/models/: __init__.py  booking.py  booking_event.py  booking_extra.py  booking_passenger.py  flight.py  knowledge_article.py  seat_inventory.py
backend/app/schemas/: almas.py  booking.py  flight.py  jira.py  knowledge.py  seat_inventory.py  testing.py
backend/app/scripts/: __init__.py  reconcile_seat_state.py  reset_data.py  seed_bookings.py  seed_flights.py  seed_knowledge.py
backend/app/services/: booking_service.py  flight_service.py  jira_service.py  knowledge_service.py  test_knowledge_service.py  testing_service.py
backend/app/tests/: test_flight_service.py
backend/data/almas/: runs_index.json
backend/eval_grading/: conftest.py  test_booking_service_fakes.py  test_flight_service_fakes.py  test_knowledge_service_fakes.py  test_passenger_type_pricing.py  test_seat_inventory_fakes.py
backend/eval_results/: bench-20260610-170134.csv  bench-20260610-172918.csv  bench-20260612-115157.csv  bench-20260612-163021.csv  bench-20260612-163021.json  bench-20260612-164851.csv  bench-20260612-164851.json  bench-20260612-164851.xlsx  bench-20260612-172724.csv  bench-20260612-172724.json  ~$bench-20260612-164851.xlsx
backend/tests/: test_almas_logging.py  test_eval_harness.py  test_github_adapter.py  test_supervisor_and_testing_service.py
backend/tests/services/: test_booking_service.py
(+703 files in other folders)
