[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techmellon-airline-backend"
version = "0.1.0"
description = "Backend database and flight inventory setup for the TechMellon assessment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14,<2.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "pydantic-ai>=0.0.24,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.0,<2.0",
    "SQLAlchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
# Visualization tooling for the ALMAS eval harness (app/eval/plot_results.py).
# Not required to run the app or the pipeline; install with:
#   pip install -e ".[viz]"
viz = [
    "matplotlib>=3.8,<4.0",
    "pandas>=2.0,<4.0",
    "seaborn>=0.13,<1.0",
]

[tool.pytest.ini_options]
# Default suite is the unit tests under tests/. The eval_grading/ behavioural
# tests are run on demand by the ALMAS eval harness (they intentionally fail
# while a bug fixture is injected), so they are excluded from the default run.
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "app*"]
